2009-12-23  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=32905
        With Pinyin Simplified IM, a wrong character is deleted from google.com suggestion

        * platform/mac/editing/input/selection-change-closes-typing-expected.txt: Added.
        * platform/mac/editing/input/selection-change-closes-typing.html: Added.

2009-12-23  David Levin  <levin@chromium.org>

        REGRESSION (r52494): Assertion failure in Frame::caretBlinkTimerFired() (selection()->isCaret())
        https://bugs.webkit.org/show_bug.cgi?id=32903

        No review but ok'ed by Darin Adler. Rolling out r52494 due to above regression.

        * fast/forms/selection-layout-reentry-strange-case-expected.txt: Removed.
        * fast/forms/selection-layout-reentry-strange-case.html: Removed.
        * platform/mac/accessibility/frame-with-title-expected.txt:

2009-12-23  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Eric Seidel.

        Reverse JS GenerateConstructor logic
        https://bugs.webkit.org/show_bug.cgi?id=32910

        HTMLOptionsCollection correctly exposes its JS constructor now, thus fixing its test in fast/dom/wrapper-classes.html

        * fast/dom/wrapper-classes-expected.txt:

2009-12-23  Brian Weinstein  <bweinstein@apple.com>

        Rubber-stamped by Eric Seidel.

        Added Windows specific results for a test that was committed in r52505.

        * platform/win/fast/forms/basic-textareas-quirks-expected.txt: Added.

2009-12-23  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        "Refused to execute a JavaScript script" error when embedding SWF with
        a URL that is also a query parameter
        https://bugs.webkit.org/show_bug.cgi?id=32908

        Update expected results to show that we don't raise an alarm in this case.

        * http/tests/security/xssAuditor/object-src-inject-expected.txt:

2009-12-23  Dan Bernstein  <mitz@apple.com>